; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/image/lzma-loader/src/extr_uart16550.c_Uart16550Put.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/image/lzma-loader/src/extr_uart16550.c_Uart16550Put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OFS_LINE_STATUS = common dso_local global i32 0, align 4
@OFS_SEND_BUFFER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Uart16550Put(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br label %3

3:                                                ; preds = %8, %1
  %4 = load i32, i32* @OFS_LINE_STATUS, align 4
  %5 = call i32 @UART16550_READ(i32 %4)
  %6 = and i32 %5, 32
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %3
  br label %3

9:                                                ; preds = %3
  %10 = load i32, i32* @OFS_SEND_BUFFER, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @UART16550_WRITE(i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @UART16550_READ(i32) #1

declare dso_local i32 @UART16550_WRITE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
